# newsfrwdr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: docker.yaml  rust.yaml
src/: config.rs  error.rs  input.rs  main.rs
src/outputs/: custom.rs  discord.rs  discord_bot.rs  discord_webhook.rs  mod.rs  slack.rs
