[package]
name = "newsfrwdr"
version = "0.1.0-alpha.1"
authors = ["rdk31 <rdk31@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rdk31/newsfrwdr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.2"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime-serde = "1"

chrono = { version = "0.4", features = ["serde"] }

thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

gumdrop = "0.8"

serenity = "0.10"

slack-bk = "0.1"

html2text = "0.5"
